--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: pdfviewer-6-0-16-2
+DATE: 08/31/2020
+STAFF: jak
+fixed bug in splitter.cgi and Configuration.py
+
 TAG: pdfviewer-6-0-16-1
 DATE: 08/21/2020
 STAFF: lec
