wts2-890/Extracted Text Splitter cgi Ref ID not working

--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: pdfviewer-6-0-20-1
+DATE: 06/14/2022
+STAFF: lec
+wts2-890/Extracted Text Splitter cgi Ref ID not working
+
 TAG: pdfviewer-6-0-16-4
 DATE: 9/16/2020
 STAFF: jak
