--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: pdfviewer-6-0-23-1
+DATE: 03/25/2024
+STAFF: lec
+wts2-1397/Migration to Rocky OS
+
 TAG: pdfviewer-6-0-21-1
 DATE: 08/04/2022
 STAFF: sc
