wts2-1605/e4g-124/Retire AdHoc Server : remove local dependencies

--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: pdfviewer-6-0-25-1
+DATE: 01/27/2025
+STAFF: lec
+wts2-1605/e4g-124/Retire AdHoc Server : remove local dependencies
+
 TAG: pdfviewer-6-0-23-1
 DATE: 03/25/2024
 STAFF: lec
