wts2-1669/Install Python 3.12

--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+TAG: pdfviewer-6-0-25-2
+DATE: 06/18/2025
+STAFF: lec
+wts2-1669/Install Python 3.12
+        modified:   Configuration.default
+
 TAG: pdfviewer-6-0-25-1
 DATE: 01/27/2025
 STAFF: lec
